linux/y.output
Terminals unused in grammar

    EXTERNAL
    EVENT_SEQ


State 7 conflicts: 3 shift/reduce
State 19 conflicts: 1 shift/reduce
State 32 conflicts: 1 shift/reduce
State 72 conflicts: 1 shift/reduce
State 112 conflicts: 1 shift/reduce


Grammar

    0 $accept: fsmlang $end

    1 fsmlang: machine
    2        | fsmlang machine

    3 machine_prefix: native machine_modifier MACHINE_KEY

    4 $@1: ε

    5 machine: machine_prefix ID machine_qualifier $@1 '{' statement_decl_list '}'

    6 machine_qualifier: ε
    7                  | machine_transition_decl
    8                  | action_return_spec
    9                  | native_impl
   10                  | machine_qualifier machine_transition_decl
   11                  | machine_qualifier action_return_spec
   12                  | machine_qualifier native_impl

   13 machine_transition_decl: ON TRANSITION_KEY ID ';'

   14 action_return_spec: ACTIONS RETURN EVENTS ';'
   15                   | ACTIONS RETURN STATES ';'
   16                   | ACTIONS RETURN VOID ';'

   17 machine_modifier: ε
   18                 | REENTRANT

   19 statement_decl_list: state_and_event_decls actions_and_transitions
   20                    | machine_data state_and_event_decls actions_and_transitions
   21                    | statement_decl_list sequences

   22 sequence_start: SEQUENCE_KEY
   23               | sequence_start ID
   24               | sequence_start ID START_KEY STATE
   25               | sequence_start START_KEY STATE

   26 sequence_node: EVENT
   27              | EVENT TRANSITION_KEY STATE

   28 sequence_nodes: sequence_node
   29               | sequence_nodes ',' sequence_node

   30 sequence: sequence_start sequence_nodes ';'
   31         | sequence_start sequence_nodes END_KEY STATE ';'

   32 sequences: sequence
   33          | sequences sequence

   34 machine_list: machine
   35             | machine_list machine

   36 actions_and_transitions: machine_list
   37                        | action_decl
   38                        | transition_matrix_list
   39                        | action_return_decl
   40                        | transition_fn_return_decl
   41                        | actions_and_transitions action_decl
   42                        | actions_and_transitions transition_matrix_list
   43                        | actions_and_transitions action_return_decl
   44                        | actions_and_transitions transition_fn_return_decl

   45 transition_matrix_list: transition_matrix

   46 transition_matrix_start: matrix TRANSITION_KEY
   47                        | TRANSITION_KEY matrix
   48                        | matrix GUARD_KEY
   49                        | GUARD_KEY matrix

   50 transition_matrix: transition_matrix_start STATE ';'
   51                  | transition_matrix_start ID ';'
   52                  | transition_matrix_start TRANSITION_FN ';'

   53 action_decl: action_decl_list ';'

   54 action_decl_list: ACTION_KEY action
   55                 | action_decl_list ',' action

   56 action: action_matrix
   57       | action_matrix transition

   58 transition: TRANSITION_KEY STATE
   59           | TRANSITION_KEY ID
   60           | TRANSITION_KEY TRANSITION_FN
   61           | GUARD_KEY ID
   62           | GUARD_KEY TRANSITION_FN

   63 action_matrix: ID matrix
   64              | ACTION matrix

   65 matrix: '[' event_vector ',' state_vector ']'

   66 state_vector: '(' ALL ')'
   67             | '(' state_comma_list STATE ')'
   68             | STATE

   69 state_comma_list: STATE ','
   70                 | state_comma_list STATE ','

   71 event_vector: '(' ALL ')'
   72             | '(' event_comma_list EVENT ')'
   73             | EVENT

   74 event_comma_list: EVENT ','
   75                 | event_comma_list EVENT ','

   76 state_and_event_decls: state_decl
   77                      | event_decl
   78                      | state_and_event_decls state_decl
   79                      | state_and_event_decls event_decl

   80 state_decl: state_decl_list ';'

   81 state: ID
   82      | state INHIBITS SUBMACHINES
   83      | state ON ENTRY
   84      | state ON ENTRY ID
   85      | state ON EXIT
   86      | state ON EXIT ID

   87 state_decl_list: STATE_KEY state
   88                | state_decl_list ',' state

   89 event_decl: event_decl_list ';'

   90 parent_namespace: PARENT NAMESPACE

   91 user_event_data: ε
   92                | DATA_KEY TRANSLATOR_KEY ID
   93                | DATA_KEY TRANSLATOR_KEY ID data_block
   94                | DATA_KEY data_block

   95 event_decl_list: EVENT_KEY ID external_designation user_event_data
   96                | EVENT_KEY parent_namespace EVENT user_event_data
   97                | event_decl_list ',' ID external_designation user_event_data
   98                | event_decl_list ',' parent_namespace EVENT user_event_data

   99 external_designation: ε
  100                     | '=' ID

  101 native: ε
  102       | native native_prologue
  103       | native native_epilogue

  104 native_prologue: NATIVE_KEY NATIVE_BLOCK
  105                | NATIVE_KEY PROLOGUE_KEY NATIVE_BLOCK

  106 native_epilogue: NATIVE_KEY EPILOGUE_KEY NATIVE_BLOCK

  107 native_impl: native_impl_prologue
  108            | native_impl_epilogue
  109            | native_impl native_impl_prologue
  110            | native_impl native_impl_epilogue

  111 native_impl_prologue: NATIVE_KEY IMPLEMENTATION_KEY NATIVE_BLOCK
  112                     | NATIVE_KEY IMPLEMENTATION_KEY PROLOGUE_KEY NATIVE_BLOCK

  113 native_impl_epilogue: NATIVE_KEY IMPLEMENTATION_KEY EPILOGUE_KEY NATIVE_BLOCK

  114 machine_data: DATA_KEY data_block

  115 data_block: '{' data_fields '}'

  116 data_fields: data_field
  117            | data_fields data_field

  118 data_type: ID
  119          | TYPE_NAME
  120          | STRUCT_KEY '{' data_fields '}'
  121          | UNION_KEY '{' data_fields '}'
  122          | data_type '*'

  123 data_field: data_type ID data_field_dimension ';'
  124           | data_type ID ';'

  125 data_field_dimension: '[' ']'
  126                     | '[' NUMERIC_STRING ']'
  127                     | '[' ID ']'

  128 namespace: parent_namespace
  129          | MACHINE NAMESPACE

  130 namespace_event_ref: namespace EVENT

  131 returns_comma_list: namespace_event_ref ','
  132                   | EVENT ','
  133                   | returns_comma_list namespace_event_ref ','
  134                   | returns_comma_list EVENT ','

  135 action_return_decl: ACTION RETURNS returns_comma_list EVENT ';'
  136                   | ACTION RETURNS returns_comma_list namespace_event_ref ';'
  137                   | ACTION RETURNS EVENT ';'
  138                   | ACTION RETURNS namespace_event_ref ';'
  139                   | ACTION RETURNS state_comma_list STATE ';'
  140                   | ACTION RETURNS STATE ';'

  141 transition_fn_return_decl: TRANSITION_FN RETURNS state_comma_list STATE ';'
  142                          | TRANSITION_FN RETURNS STATE ';'


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 66 67 71 72
    ')' (41) 66 67 71 72
    '*' (42) 122
    ',' (44) 29 55 65 69 70 74 75 88 97 98 131 132 133 134
    ';' (59) 13 14 15 16 30 31 50 51 52 53 80 89 123 124 135 136 137 138 139 140 141 142
    '=' (61) 100
    '[' (91) 65 125 126 127
    ']' (93) 65 125 126 127
    '{' (123) 5 115 120 121
    '}' (125) 5 115 120 121
    error (256)
    ON (258) 13 83 84 85 86
    NAMESPACE (259) 90 129
    STATE_KEY (260) 87
    EVENT_KEY (261) 95 96
    PROLOGUE_KEY (262) 105 112
    EPILOGUE_KEY (263) 106 113
    DATA_KEY (264) 92 93 94 114
    TRANSLATOR_KEY (265) 92 93
    MACHINE_KEY (266) 3
    REENTRANT (267) 18
    ACTIONS (268) 14 15 16
    RETURN (269) 14 15 16
    STATES (270) 15
    EVENTS (271) 14
    RETURNS (272) 135 136 137 138 139 140 141 142
    EXTERNAL (273)
    VOID (274) 16
    IMPLEMENTATION_KEY (275) 111 112 113
    INHIBITS (276) 82
    SUBMACHINES (277) 82
    ALL (278) 66 71
    ENTRY (279) 83 84
    EXIT (280) 85 86
    STRUCT_KEY (281) 120
    UNION_KEY (282) 121
    START_KEY (283) 24 25
    EVENT_SEQ (284)
    END_KEY (285) 31
    SEQUENCE_KEY <charData> (286) 22
    ACTION_KEY <charData> (287) 54
    TRANSITION_KEY <charData> (288) 13 27 46 47 58 59 60
    GUARD_KEY <charData> (289) 48 49 61 62
    PARENT <charData> (290) 90
    NATIVE_KEY <charData> (291) 104 105 106 111 112 113
    NATIVE_BLOCK <charData> (292) 104 105 106 111 112 113
    MACHINE <pid_info> (293) 129
    STATE <pid_info> (294) 24 25 27 31 50 58 67 68 69 70 139 140 141 142
    EVENT <pid_info> (295) 26 27 72 73 74 75 96 98 130 132 134 135 137
    ACTION <pid_info> (296) 64 135 136 137 138 139 140
    TRANSITION_FN <pid_info> (297) 52 60 62 141 142
    ID <pid_info> (298) 5 13 23 24 51 59 61 63 81 84 86 92 93 95 97 100 118 123 124 127
    NUMERIC_STRING <charData> (299) 126
    TYPE_NAME <pid_info> (300) 119


Nonterminals, with rules where they appear

    $accept (56)
        on left: 0
    fsmlang (57)
        on left: 1 2
        on right: 0 2
    machine_prefix <pmachine_prefix> (58)
        on left: 3
        on right: 5
    machine <pmachineInfo> (59)
        on left: 5
        on right: 1 2 34 35
    $@1 (60)
        on left: 4
        on right: 5
    machine_qualifier <pmachine_qualifier> (61)
        on left: 6 7 8 9 10 11 12
        on right: 5 10 11 12
    machine_transition_decl <pid_info> (62)
        on left: 13
        on right: 7 10
    action_return_spec <mod_flags> (63)
        on left: 14 15 16
        on right: 8 11
    machine_modifier <mod_flags> (64)
        on left: 17 18
        on right: 3
    statement_decl_list <pstatement_decl_list> (65)
        on left: 19 20 21
        on right: 5 21
    sequence_start <psequence> (66)
        on left: 22 23 24 25
        on right: 23 24 25 30 31
    sequence_node <pevent_sequence_node> (67)
        on left: 26 27
        on right: 28 29
    sequence_nodes <plist> (68)
        on left: 28 29
        on right: 29 30 31
    sequence <psequence> (69)
        on left: 30 31
        on right: 32 33
    sequences <plist> (70)
        on left: 32 33
        on right: 21 33
    machine_list <plist> (71)
        on left: 34 35
        on right: 35 36
    actions_and_transitions <pactions_and_transitions> (72)
        on left: 36 37 38 39 40 41 42 43 44
        on right: 19 20 41 42 43 44
    transition_matrix_list <action_info> (73)
        on left: 45
        on right: 38 42
    transition_matrix_start <action_info> (74)
        on left: 46 47 48 49
        on right: 50 51 52
    transition_matrix <action_info> (75)
        on left: 50 51 52
        on right: 45
    action_decl <paction_decl> (76)
        on left: 53
        on right: 37 41
    action_decl_list <paction_decl> (77)
        on left: 54 55
        on right: 53 55
    action <action_info> (78)
        on left: 56 57
        on right: 54 55
    transition <pid_info> (79)
        on left: 58 59 60 61 62
        on right: 57
    action_matrix <action_info> (80)
        on left: 63 64
        on right: 56 57
    matrix <matrix_info> (81)
        on left: 65
        on right: 46 47 48 49 63 64
    state_vector <plist> (82)
        on left: 66 67 68
        on right: 65
    state_comma_list <plist> (83)
        on left: 69 70
        on right: 67 70 139 141
    event_vector <plist> (84)
        on left: 71 72 73
        on right: 65
    event_comma_list <plist> (85)
        on left: 74 75
        on right: 72 75
    state_and_event_decls <pstate_and_event_decls> (86)
        on left: 76 77 78 79
        on right: 19 20 78 79
    state_decl <plist> (87)
        on left: 80
        on right: 76 78
    state <pid_info> (88)
        on left: 81 82 83 84 85 86
        on right: 82 83 84 85 86 87 88
    state_decl_list <plist> (89)
        on left: 87 88
        on right: 80 88
    event_decl <plist> (90)
        on left: 89
        on right: 77 79
    parent_namespace <charData> (91)
        on left: 90
        on right: 96 98 128
    user_event_data <puser_event_data> (92)
        on left: 91 92 93 94
        on right: 95 96 97 98
    event_decl_list <plist> (93)
        on left: 95 96 97 98
        on right: 89 97 98
    external_designation <pid_info> (94)
        on left: 99 100
        on right: 95 97
    native <pnative_info> (95)
        on left: 101 102 103
        on right: 3 102 103
    native_prologue <charData> (96)
        on left: 104 105
        on right: 102
    native_epilogue <charData> (97)
        on left: 106
        on right: 103
    native_impl <pnative_info> (98)
        on left: 107 108 109 110
        on right: 9 12 109 110
    native_impl_prologue <charData> (99)
        on left: 111 112
        on right: 107 109
    native_impl_epilogue <charData> (100)
        on left: 113
        on right: 108 110
    machine_data <plist> (101)
        on left: 114
        on right: 20
    data_block <plist> (102)
        on left: 115
        on right: 93 94 114
    data_fields <plist> (103)
        on left: 116 117
        on right: 115 117 120 121
    data_type <pdata_type_struct> (104)
        on left: 118 119 120 121 122
        on right: 122 123 124
    data_field <pdata_field> (105)
        on left: 123 124
        on right: 116 117
    data_field_dimension <charData> (106)
        on left: 125 126 127
        on right: 123
    namespace (107)
        on left: 128 129
        on right: 130
    namespace_event_ref <pid_info> (108)
        on left: 130
        on right: 131 133 136 138
    returns_comma_list <plist> (109)
        on left: 131 132 133 134
        on right: 133 134 135 136
    action_return_decl (110)
        on left: 135 136 137 138 139 140
        on right: 39 43
    transition_fn_return_decl (111)
        on left: 141 142
        on right: 40 44


State 0

    0 $accept: • fsmlang $end

    $default  reduce using rule 101 (native)

    fsmlang         go to state 1
    machine_prefix  go to state 2
    machine         go to state 3
    native          go to state 4


State 1

    0 $accept: fsmlang • $end
    2 fsmlang: fsmlang • machine

    $end  shift, and go to state 5

    $default  reduce using rule 101 (native)

    machine_prefix  go to state 2
    machine         go to state 6
    native          go to state 4


State 2

    5 machine: machine_prefix • ID machine_qualifier $@1 '{' statement_decl_list '}'

    ID  shift, and go to state 7


State 3

    1 fsmlang: machine •

    $default  reduce using rule 1 (fsmlang)


State 4

    3 machine_prefix: native • machine_modifier MACHINE_KEY
  102 native: native • native_prologue
  103       | native • native_epilogue

    REENTRANT   shift, and go to state 8
    NATIVE_KEY  shift, and go to state 9

    $default  reduce using rule 17 (machine_modifier)

    machine_modifier  go to state 10
    native_prologue   go to state 11
    native_epilogue   go to state 12


State 5

    0 $accept: fsmlang $end •

    $default  accept


State 6

    2 fsmlang: fsmlang machine •

    $default  reduce using rule 2 (fsmlang)


State 7

    5 machine: machine_prefix ID • machine_qualifier $@1 '{' statement_decl_list '}'

    ON          shift, and go to state 13
    ACTIONS     shift, and go to state 14
    NATIVE_KEY  shift, and go to state 15

    ON          [reduce using rule 6 (machine_qualifier)]
    ACTIONS     [reduce using rule 6 (machine_qualifier)]
    NATIVE_KEY  [reduce using rule 6 (machine_qualifier)]
    $default    reduce using rule 6 (machine_qualifier)

    machine_qualifier        go to state 16
    machine_transition_decl  go to state 17
    action_return_spec       go to state 18
    native_impl              go to state 19
    native_impl_prologue     go to state 20
    native_impl_epilogue     go to state 21


State 8

   18 machine_modifier: REENTRANT •

    $default  reduce using rule 18 (machine_modifier)


State 9

  104 native_prologue: NATIVE_KEY • NATIVE_BLOCK
  105                | NATIVE_KEY • PROLOGUE_KEY NATIVE_BLOCK
  106 native_epilogue: NATIVE_KEY • EPILOGUE_KEY NATIVE_BLOCK

    PROLOGUE_KEY  shift, and go to state 22
    EPILOGUE_KEY  shift, and go to state 23
    NATIVE_BLOCK  shift, and go to state 24


State 10

    3 machine_prefix: native machine_modifier • MACHINE_KEY

    MACHINE_KEY  shift, and go to state 25


State 11

  102 native: native native_prologue •

    $default  reduce using rule 102 (native)


State 12

  103 native: native native_epilogue •

    $default  reduce using rule 103 (native)


State 13

   13 machine_transition_decl: ON • TRANSITION_KEY ID ';'

    TRANSITION_KEY  shift, and go to state 26


State 14

   14 action_return_spec: ACTIONS • RETURN EVENTS ';'
   15                   | ACTIONS • RETURN STATES ';'
   16                   | ACTIONS • RETURN VOID ';'

    RETURN  shift, and go to state 27


State 15

  111 native_impl_prologue: NATIVE_KEY • IMPLEMENTATION_KEY NATIVE_BLOCK
  112                     | NATIVE_KEY • IMPLEMENTATION_KEY PROLOGUE_KEY NATIVE_BLOCK
  113 native_impl_epilogue: NATIVE_KEY • IMPLEMENTATION_KEY EPILOGUE_KEY NATIVE_BLOCK

    IMPLEMENTATION_KEY  shift, and go to state 28


State 16

    5 machine: machine_prefix ID machine_qualifier • $@1 '{' statement_decl_list '}'
   10 machine_qualifier: machine_qualifier • machine_transition_decl
   11                  | machine_qualifier • action_return_spec
   12                  | machine_qualifier • native_impl

    ON          shift, and go to state 13
    ACTIONS     shift, and go to state 14
    NATIVE_KEY  shift, and go to state 15

    $default  reduce using rule 4 ($@1)

    $@1                      go to state 29
    machine_transition_decl  go to state 30
    action_return_spec       go to state 31
    native_impl              go to state 32
    native_impl_prologue     go to state 20
    native_impl_epilogue     go to state 21


State 17

    7 machine_qualifier: machine_transition_decl •

    $default  reduce using rule 7 (machine_qualifier)


State 18

    8 machine_qualifier: action_return_spec •

    $default  reduce using rule 8 (machine_qualifier)


State 19

    9 machine_qualifier: native_impl •
  109 native_impl: native_impl • native_impl_prologue
  110            | native_impl • native_impl_epilogue

    NATIVE_KEY  shift, and go to state 15

    NATIVE_KEY  [reduce using rule 9 (machine_qualifier)]
    $default    reduce using rule 9 (machine_qualifier)

    native_impl_prologue  go to state 33
    native_impl_epilogue  go to state 34


State 20

  107 native_impl: native_impl_prologue •

    $default  reduce using rule 107 (native_impl)


State 21

  108 native_impl: native_impl_epilogue •

    $default  reduce using rule 108 (native_impl)


State 22

  105 native_prologue: NATIVE_KEY PROLOGUE_KEY • NATIVE_BLOCK

    NATIVE_BLOCK  shift, and go to state 35


State 23

  106 native_epilogue: NATIVE_KEY EPILOGUE_KEY • NATIVE_BLOCK

    NATIVE_BLOCK  shift, and go to state 36


State 24

  104 native_prologue: NATIVE_KEY NATIVE_BLOCK •

    $default  reduce using rule 104 (native_prologue)


State 25

    3 machine_prefix: native machine_modifier MACHINE_KEY •

    $default  reduce using rule 3 (machine_prefix)


State 26

   13 machine_transition_decl: ON TRANSITION_KEY • ID ';'

    ID  shift, and go to state 37


State 27

   14 action_return_spec: ACTIONS RETURN • EVENTS ';'
   15                   | ACTIONS RETURN • STATES ';'
   16                   | ACTIONS RETURN • VOID ';'

    STATES  shift, and go to state 38
    EVENTS  shift, and go to state 39
    VOID    shift, and go to state 40


State 28

  111 native_impl_prologue: NATIVE_KEY IMPLEMENTATION_KEY • NATIVE_BLOCK
  112                     | NATIVE_KEY IMPLEMENTATION_KEY • PROLOGUE_KEY NATIVE_BLOCK
  113 native_impl_epilogue: NATIVE_KEY IMPLEMENTATION_KEY • EPILOGUE_KEY NATIVE_BLOCK

    PROLOGUE_KEY  shift, and go to state 41
    EPILOGUE_KEY  shift, and go to state 42
    NATIVE_BLOCK  shift, and go to state 43


State 29

    5 machine: machine_prefix ID machine_qualifier $@1 • '{' statement_decl_list '}'

    '{'  shift, and go to state 44


State 30

   10 machine_qualifier: machine_qualifier machine_transition_decl •

    $default  reduce using rule 10 (machine_qualifier)


State 31

   11 machine_qualifier: machine_qualifier action_return_spec •

    $default  reduce using rule 11 (machine_qualifier)


State 32

   12 machine_qualifier: machine_qualifier native_impl •
  109 native_impl: native_impl • native_impl_prologue
  110            | native_impl • native_impl_epilogue

    NATIVE_KEY  shift, and go to state 15

    NATIVE_KEY  [reduce using rule 12 (machine_qualifier)]
    $default    reduce using rule 12 (machine_qualifier)

    native_impl_prologue  go to state 33
    native_impl_epilogue  go to state 34


State 33

  109 native_impl: native_impl native_impl_prologue •

    $default  reduce using rule 109 (native_impl)


State 34

  110 native_impl: native_impl native_impl_epilogue •

    $default  reduce using rule 110 (native_impl)


State 35

  105 native_prologue: NATIVE_KEY PROLOGUE_KEY NATIVE_BLOCK •

    $default  reduce using rule 105 (native_prologue)


State 36

  106 native_epilogue: NATIVE_KEY EPILOGUE_KEY NATIVE_BLOCK •

    $default  reduce using rule 106 (native_epilogue)


State 37

   13 machine_transition_decl: ON TRANSITION_KEY ID • ';'

    ';'  shift, and go to state 45


State 38

   15 action_return_spec: ACTIONS RETURN STATES • ';'

    ';'  shift, and go to state 46


State 39

   14 action_return_spec: ACTIONS RETURN EVENTS • ';'

    ';'  shift, and go to state 47


State 40

   16 action_return_spec: ACTIONS RETURN VOID • ';'

    ';'  shift, and go to state 48


State 41

  112 native_impl_prologue: NATIVE_KEY IMPLEMENTATION_KEY PROLOGUE_KEY • NATIVE_BLOCK

    NATIVE_BLOCK  shift, and go to state 49


State 42

  113 native_impl_epilogue: NATIVE_KEY IMPLEMENTATION_KEY EPILOGUE_KEY • NATIVE_BLOCK

    NATIVE_BLOCK  shift, and go to state 50


State 43

  111 native_impl_prologue: NATIVE_KEY IMPLEMENTATION_KEY NATIVE_BLOCK •

    $default  reduce using rule 111 (native_impl_prologue)


State 44

    5 machine: machine_prefix ID machine_qualifier $@1 '{' • statement_decl_list '}'

    STATE_KEY  shift, and go to state 51
    EVENT_KEY  shift, and go to state 52
    DATA_KEY   shift, and go to state 53

    statement_decl_list    go to state 54
    state_and_event_decls  go to state 55
    state_decl             go to state 56
    state_decl_list        go to state 57
    event_decl             go to state 58
    event_decl_list        go to state 59
    machine_data           go to state 60


State 45

   13 machine_transition_decl: ON TRANSITION_KEY ID ';' •

    $default  reduce using rule 13 (machine_transition_decl)


State 46

   15 action_return_spec: ACTIONS RETURN STATES ';' •

    $default  reduce using rule 15 (action_return_spec)


State 47

   14 action_return_spec: ACTIONS RETURN EVENTS ';' •

    $default  reduce using rule 14 (action_return_spec)


State 48

   16 action_return_spec: ACTIONS RETURN VOID ';' •

    $default  reduce using rule 16 (action_return_spec)


State 49

  112 native_impl_prologue: NATIVE_KEY IMPLEMENTATION_KEY PROLOGUE_KEY NATIVE_BLOCK •

    $default  reduce using rule 112 (native_impl_prologue)


State 50

  113 native_impl_epilogue: NATIVE_KEY IMPLEMENTATION_KEY EPILOGUE_KEY NATIVE_BLOCK •

    $default  reduce using rule 113 (native_impl_epilogue)


State 51

   87 state_decl_list: STATE_KEY • state

    ID  shift, and go to state 61

    state  go to state 62


State 52

   95 event_decl_list: EVENT_KEY • ID external_designation user_event_data
   96                | EVENT_KEY • parent_namespace EVENT user_event_data

    PARENT  shift, and go to state 63
    ID      shift, and go to state 64

    parent_namespace  go to state 65


State 53

  114 machine_data: DATA_KEY • data_block

    '{'  shift, and go to state 66

    data_block  go to state 67


State 54

    5 machine: machine_prefix ID machine_qualifier $@1 '{' statement_decl_list • '}'
   21 statement_decl_list: statement_decl_list • sequences

    SEQUENCE_KEY  shift, and go to state 68
    '}'           shift, and go to state 69

    sequence_start  go to state 70
    sequence        go to state 71
    sequences       go to state 72


State 55

   19 statement_decl_list: state_and_event_decls • actions_and_transitions
   78 state_and_event_decls: state_and_event_decls • state_decl
   79                      | state_and_event_decls • event_decl

    STATE_KEY       shift, and go to state 51
    EVENT_KEY       shift, and go to state 52
    ACTION_KEY      shift, and go to state 73
    TRANSITION_KEY  shift, and go to state 74
    GUARD_KEY       shift, and go to state 75
    ACTION          shift, and go to state 76
    TRANSITION_FN   shift, and go to state 77
    '['             shift, and go to state 78

    $default  reduce using rule 101 (native)

    machine_prefix             go to state 2
    machine                    go to state 79
    machine_list               go to state 80
    actions_and_transitions    go to state 81
    transition_matrix_list     go to state 82
    transition_matrix_start    go to state 83
    transition_matrix          go to state 84
    action_decl                go to state 85
    action_decl_list           go to state 86
    matrix                     go to state 87
    state_decl                 go to state 88
    state_decl_list            go to state 57
    event_decl                 go to state 89
    event_decl_list            go to state 59
    native                     go to state 4
    action_return_decl         go to state 90
    transition_fn_return_decl  go to state 91


State 56

   76 state_and_event_decls: state_decl •

    $default  reduce using rule 76 (state_and_event_decls)


State 57

   80 state_decl: state_decl_list • ';'
   88 state_decl_list: state_decl_list • ',' state

    ';'  shift, and go to state 92
    ','  shift, and go to state 93


State 58

   77 state_and_event_decls: event_decl •

    $default  reduce using rule 77 (state_and_event_decls)


State 59

   89 event_decl: event_decl_list • ';'
   97 event_decl_list: event_decl_list • ',' ID external_designation user_event_data
   98                | event_decl_list • ',' parent_namespace EVENT user_event_data

    ';'  shift, and go to state 94
    ','  shift, and go to state 95


State 60

   20 statement_decl_list: machine_data • state_and_event_decls actions_and_transitions

    STATE_KEY  shift, and go to state 51
    EVENT_KEY  shift, and go to state 52

    state_and_event_decls  go to state 96
    state_decl             go to state 56
    state_decl_list        go to state 57
    event_decl             go to state 58
    event_decl_list        go to state 59


State 61

   81 state: ID •

    $default  reduce using rule 81 (state)


State 62

   82 state: state • INHIBITS SUBMACHINES
   83      | state • ON ENTRY
   84      | state • ON ENTRY ID
   85      | state • ON EXIT
   86      | state • ON EXIT ID
   87 state_decl_list: STATE_KEY state •

    ON        shift, and go to state 97
    INHIBITS  shift, and go to state 98

    $default  reduce using rule 87 (state_decl_list)


State 63

   90 parent_namespace: PARENT • NAMESPACE

    NAMESPACE  shift, and go to state 99


State 64

   95 event_decl_list: EVENT_KEY ID • external_designation user_event_data

    '='  shift, and go to state 100

    $default  reduce using rule 99 (external_designation)

    external_designation  go to state 101


State 65

   96 event_decl_list: EVENT_KEY parent_namespace • EVENT user_event_data

    EVENT  shift, and go to state 102


State 66

  115 data_block: '{' • data_fields '}'

    STRUCT_KEY  shift, and go to state 103
    UNION_KEY   shift, and go to state 104
    ID          shift, and go to state 105
    TYPE_NAME   shift, and go to state 106

    data_fields  go to state 107
    data_type    go to state 108
    data_field   go to state 109


State 67

  114 machine_data: DATA_KEY data_block •

    $default  reduce using rule 114 (machine_data)


State 68

   22 sequence_start: SEQUENCE_KEY •

    $default  reduce using rule 22 (sequence_start)


State 69

    5 machine: machine_prefix ID machine_qualifier $@1 '{' statement_decl_list '}' •

    $default  reduce using rule 5 (machine)


State 70

   23 sequence_start: sequence_start • ID
   24               | sequence_start • ID START_KEY STATE
   25               | sequence_start • START_KEY STATE
   30 sequence: sequence_start • sequence_nodes ';'
   31         | sequence_start • sequence_nodes END_KEY STATE ';'

    START_KEY  shift, and go to state 110
    EVENT      shift, and go to state 111
    ID         shift, and go to state 112

    sequence_node   go to state 113
    sequence_nodes  go to state 114


State 71

   32 sequences: sequence •

    $default  reduce using rule 32 (sequences)


State 72

   21 statement_decl_list: statement_decl_list sequences •
   33 sequences: sequences • sequence

    SEQUENCE_KEY  shift, and go to state 68

    SEQUENCE_KEY  [reduce using rule 21 (statement_decl_list)]
    $default      reduce using rule 21 (statement_decl_list)

    sequence_start  go to state 70
    sequence        go to state 115


State 73

   54 action_decl_list: ACTION_KEY • action

    ACTION  shift, and go to state 116
    ID      shift, and go to state 117

    action         go to state 118
    action_matrix  go to state 119


State 74

   47 transition_matrix_start: TRANSITION_KEY • matrix

    '['  shift, and go to state 78

    matrix  go to state 120


State 75

   49 transition_matrix_start: GUARD_KEY • matrix

    '['  shift, and go to state 78

    matrix  go to state 121


State 76

  135 action_return_decl: ACTION • RETURNS returns_comma_list EVENT ';'
  136                   | ACTION • RETURNS returns_comma_list namespace_event_ref ';'
  137                   | ACTION • RETURNS EVENT ';'
  138                   | ACTION • RETURNS namespace_event_ref ';'
  139                   | ACTION • RETURNS state_comma_list STATE ';'
  140                   | ACTION • RETURNS STATE ';'

    RETURNS  shift, and go to state 122


State 77

  141 transition_fn_return_decl: TRANSITION_FN • RETURNS state_comma_list STATE ';'
  142                          | TRANSITION_FN • RETURNS STATE ';'

    RETURNS  shift, and go to state 123


State 78

   65 matrix: '[' • event_vector ',' state_vector ']'

    EVENT  shift, and go to state 124
    '('    shift, and go to state 125

    event_vector  go to state 126


State 79

   34 machine_list: machine •

    $default  reduce using rule 34 (machine_list)


State 80

   35 machine_list: machine_list • machine
   36 actions_and_transitions: machine_list •

    MACHINE_KEY  reduce using rule 101 (native)
    REENTRANT    reduce using rule 101 (native)
    NATIVE_KEY   reduce using rule 101 (native)
    $default     reduce using rule 36 (actions_and_transitions)

    machine_prefix  go to state 2
    machine         go to state 127
    native          go to state 4


State 81

   19 statement_decl_list: state_and_event_decls actions_and_transitions •
   41 actions_and_transitions: actions_and_transitions • action_decl
   42                        | actions_and_transitions • transition_matrix_list
   43                        | actions_and_transitions • action_return_decl
   44                        | actions_and_transitions • transition_fn_return_decl

    ACTION_KEY      shift, and go to state 73
    TRANSITION_KEY  shift, and go to state 74
    GUARD_KEY       shift, and go to state 75
    ACTION          shift, and go to state 76
    TRANSITION_FN   shift, and go to state 77
    '['             shift, and go to state 78

    $default  reduce using rule 19 (statement_decl_list)

    transition_matrix_list     go to state 128
    transition_matrix_start    go to state 83
    transition_matrix          go to state 84
    action_decl                go to state 129
    action_decl_list           go to state 86
    matrix                     go to state 87
    action_return_decl         go to state 130
    transition_fn_return_decl  go to state 131


State 82

   38 actions_and_transitions: transition_matrix_list •

    $default  reduce using rule 38 (actions_and_transitions)


State 83

   50 transition_matrix: transition_matrix_start • STATE ';'
   51                  | transition_matrix_start • ID ';'
   52                  | transition_matrix_start • TRANSITION_FN ';'

    STATE          shift, and go to state 132
    TRANSITION_FN  shift, and go to state 133
    ID             shift, and go to state 134


State 84

   45 transition_matrix_list: transition_matrix •

    $default  reduce using rule 45 (transition_matrix_list)


State 85

   37 actions_and_transitions: action_decl •

    $default  reduce using rule 37 (actions_and_transitions)


State 86

   53 action_decl: action_decl_list • ';'
   55 action_decl_list: action_decl_list • ',' action

    ';'  shift, and go to state 135
    ','  shift, and go to state 136


State 87

   46 transition_matrix_start: matrix • TRANSITION_KEY
   48                        | matrix • GUARD_KEY

    TRANSITION_KEY  shift, and go to state 137
    GUARD_KEY       shift, and go to state 138


State 88

   78 state_and_event_decls: state_and_event_decls state_decl •

    $default  reduce using rule 78 (state_and_event_decls)


State 89

   79 state_and_event_decls: state_and_event_decls event_decl •

    $default  reduce using rule 79 (state_and_event_decls)


State 90

   39 actions_and_transitions: action_return_decl •

    $default  reduce using rule 39 (actions_and_transitions)


State 91

   40 actions_and_transitions: transition_fn_return_decl •

    $default  reduce using rule 40 (actions_and_transitions)


State 92

   80 state_decl: state_decl_list ';' •

    $default  reduce using rule 80 (state_decl)


State 93

   88 state_decl_list: state_decl_list ',' • state

    ID  shift, and go to state 61

    state  go to state 139


State 94

   89 event_decl: event_decl_list ';' •

    $default  reduce using rule 89 (event_decl)


State 95

   97 event_decl_list: event_decl_list ',' • ID external_designation user_event_data
   98                | event_decl_list ',' • parent_namespace EVENT user_event_data

    PARENT  shift, and go to state 63
    ID      shift, and go to state 140

    parent_namespace  go to state 141


State 96

   20 statement_decl_list: machine_data state_and_event_decls • actions_and_transitions
   78 state_and_event_decls: state_and_event_decls • state_decl
   79                      | state_and_event_decls • event_decl

    STATE_KEY       shift, and go to state 51
    EVENT_KEY       shift, and go to state 52
    ACTION_KEY      shift, and go to state 73
    TRANSITION_KEY  shift, and go to state 74
    GUARD_KEY       shift, and go to state 75
    ACTION          shift, and go to state 76
    TRANSITION_FN   shift, and go to state 77
    '['             shift, and go to state 78

    $default  reduce using rule 101 (native)
